[BACKUP] General backup
Backup of a collection of ipynb and py files.

--- a/test.ipynb
+++ b/test.ipynb
@@ -50,14 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jayan\\anaconda3\\envs\\DTx\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 320, 458])\n"
+      "c:\\Users\\jayan\\Documents\\MECHATRONICS YR4\\MECH5845M - Professional Project\\Model\\DTx_SurgToolDetector_Dev\\Results\\DTxMsCL_DSAD\n"
      ]
     },
     {
@@ -67,6 +75,17 @@
       "c:\\Users\\jayan\\anaconda3\\envs\\DTx\\lib\\site-packages\\transformers\\models\\detr\\image_processing_detr.py:776: FutureWarning: The `max_size` parameter is deprecated and will be removed in v4.26. Please specify in `size['longest_edge'] instead`.\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'image' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 29\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# Select facebook trained or DTx config image processor\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# processor = DetrImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\u001b[39;00m\n\u001b[0;32m     25\u001b[0m processor \u001b[38;5;241m=\u001b[39m DetrImageProcessor(do_normalize\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mDATA\u001b[38;5;241m.\u001b[39mnormalize,\n\u001b[0;32m     26\u001b[0m         size\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mDATA\u001b[38;5;241m.\u001b[39mresize_shortedge, max_size\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mDATA\u001b[38;5;241m.\u001b[39mresize_longedge,\n\u001b[0;32m     27\u001b[0m         image_mean\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mDATA\u001b[38;5;241m.\u001b[39mimage_mean, image_std\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mDATA\u001b[38;5;241m.\u001b[39mimage_std)\n\u001b[1;32m---> 29\u001b[0m encoding \u001b[38;5;241m=\u001b[39m processor(\u001b[43mimage\u001b[49m, return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     30\u001b[0m encoding\u001b[38;5;241m.\u001b[39mkeys()\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28mprint\u001b[39m(encoding[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpixel_values\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'image' is not defined"
+     ]
     }
    ],
    "source": [
@@ -74,10 +93,22 @@
     "# This will resize the image and normalise it across channels\n",
     "from transformers import DetrImageProcessor\n",
     "from config.config import get_cfg_defaults, combine_cfgs\n",
+    "import os, pathlib\n",
     "\n",
     "# Get configs\n",
     "config_path = 'config/Exps/DTxMSCL_DSAD.yaml'\n",
     "config = combine_cfgs(config_path)\n",
+    "\n",
+    "exp_path = pathlib.Path.cwd() / config.OUTPUT_LOG.path / config.OUTPUT_LOG.exp_tag\n",
+    "if not exp_path.exists():\n",
+    "        os.makedirs(exp_path)\n",
+    "\n",
+    "# Define path to store the final model\n",
+    "if not (exp_path/\"nets\").exists():\n",
+    "        os.makedirs(exp_path/\"nets\")\n",
+    "\n",
+    "print(exp_path)\n",
+    "\n",
     "\n",
     "# Select facebook trained or DTx config image processor\n",
     "\n",
